// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|EditPage (Deprecated) isLoading 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "width": "calc(100vw - 6rem)",
            }
          }
        >
          <div
            className="EditPage__StyledEditPage-gpmt4s-0 gHSBnh"
          >
            <div
              className="Hero__StyledHero-nej8yx-0 fTphDS"
            >
              <p
                className="bx--skeleton__text"
                style={
                  Object {
                    "width": "30%",
                  }
                }
              />
            </div>
            <div
              className="EditPage__StyledPageContent-gpmt4s-1 hrCgLC"
            >
              <p
                className="bx--skeleton__text"
                style={
                  Object {
                    "width": "30%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|EditPage (Deprecated) normal 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "width": "calc(100vw - 6rem)",
            }
          }
        >
          <div
            className="EditPage__StyledEditPage-gpmt4s-0 gHSBnh"
          >
            <div
              className="Hero__StyledHero-nej8yx-0 fTphDS"
            >
              <div
                className="Hero__StyledTitleSection-nej8yx-1 imCjnH"
              >
                <div
                  className="Hero__StyledTitle-nej8yx-2 emqnjy"
                >
                  Page Title
                </div>
                <button
                  aria-label="Close,"
                  className="bx--modal-close"
                  data-modal-close={true}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    className="bx--modal-close__icon"
                    height="10"
                    viewBox="0 0 10 10"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      Close,
                    </title>
                    <path
                      d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
                      fillRule="nonzero"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              className="EditPage__StyledPageContent-gpmt4s-1 hrCgLC"
            >
              <div>
                child
              </div>
            </div>
            <div
              className="EditPage__StyledPageFooter-gpmt4s-2 dDMsJw"
            >
              <button
                className="iot--btn bx--btn bx--btn--secondary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Cancel
              </button>
              <button
                className="iot--btn bx--btn bx--btn--primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Save
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|EditPage (Deprecated) with blurb 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "width": "calc(100vw - 6rem)",
            }
          }
        >
          <div
            className="EditPage__StyledEditPage-gpmt4s-0 gHSBnh"
          >
            <div
              className="Hero__StyledHero-nej8yx-0 fTphDS"
            >
              <div
                className="Hero__StyledTitleSection-nej8yx-1 imCjnH"
              >
                <div
                  className="Hero__StyledTitle-nej8yx-2 emqnjy"
                >
                  Page Title
                </div>
                <button
                  aria-label="Close,"
                  className="bx--modal-close"
                  data-modal-close={true}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    className="bx--modal-close__icon"
                    height="10"
                    viewBox="0 0 10 10"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      Close,
                    </title>
                    <path
                      d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
                      fillRule="nonzero"
                    />
                  </svg>
                </button>
              </div>
              <p
                className="Hero__StyledPageDescription-nej8yx-3 hgaTeB"
              >
                My blurrrrbbbb!!
              </p>
            </div>
            <div
              className="EditPage__StyledPageContent-gpmt4s-1 hrCgLC"
            >
              <div>
                child
              </div>
            </div>
            <div
              className="EditPage__StyledPageFooter-gpmt4s-2 dDMsJw"
            >
              <button
                className="iot--btn bx--btn bx--btn--secondary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Cancel
              </button>
              <button
                className="iot--btn bx--btn bx--btn--primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Save
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|EditPage (Deprecated) with breadcrumb 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "width": "calc(100vw - 6rem)",
            }
          }
        >
          <div
            className="EditPage__StyledEditPage-gpmt4s-0 gHSBnh"
          >
            <div
              className="Hero__StyledHero-nej8yx-0 fTphDS"
            >
              <div
                className="Hero__StyledBreadcrumbDiv-nej8yx-6 brbWug"
              >
                <nav
                  aria-label="Breadcrumb"
                  className="Hero__StyledBreadcrumb-nej8yx-5 kRUzlm"
                >
                  <ol
                    className="bx--breadcrumb"
                  >
                    <li
                      className="bx--breadcrumb-item"
                    >
                      <a
                        className="bx--link"
                        href="/"
                      >
                        Home
                      </a>
                    </li>
                    <li
                      className="bx--breadcrumb-item"
                    >
                      <a
                        className="bx--link"
                        href="/"
                      >
                        Type
                      </a>
                    </li>
                    <li
                      className="bx--breadcrumb-item"
                    >
                      <span
                        className="bx--link"
                      >
                        Instance
                      </span>
                    </li>
                  </ol>
                </nav>
                <div
                  className="Hero__StyledRightContent-nej8yx-4 cCeABe"
                />
              </div>
              <div
                className="Hero__StyledTitleSection-nej8yx-1 djCalR"
              >
                <div
                  className="Hero__StyledTitle-nej8yx-2 emqnjy"
                >
                  Page Title
                </div>
                <button
                  aria-label="Close,"
                  className="bx--modal-close"
                  data-modal-close={true}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    className="bx--modal-close__icon"
                    height="10"
                    viewBox="0 0 10 10"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      Close,
                    </title>
                    <path
                      d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
                      fillRule="nonzero"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              className="EditPage__StyledPageContent-gpmt4s-1 hrCgLC"
            >
              <div>
                child
              </div>
            </div>
            <div
              className="EditPage__StyledPageFooter-gpmt4s-2 dDMsJw"
            >
              <button
                className="iot--btn bx--btn bx--btn--secondary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Cancel
              </button>
              <button
                className="iot--btn bx--btn bx--btn--primary"
                disabled={false}
                onClick={[Function]}
                tabIndex={0}
                type="button"
              >
                Save
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|EditPage (Deprecated) ️⛔ Deprecation Notice  1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={Object {}}
        >
          <div
            className="bx--toast-notification bx--toast-notification--warning"
            kind="warning"
            role="alert"
            style={
              Object {
                "marginBottom": ".5rem",
                "minWidth": "30rem",
              }
            }
            timeout={0}
          >
            <svg
              aria-hidden={true}
              className="bx--toast-notification__icon"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 1c-5 0-9 4-9 9s4 9 9 9 9-4 9-9-4-9-9-9zm-.8 4h1.5v7H9.2V5zm.8 11c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z"
              />
              <path
                d="M9.2 5h1.5v7H9.2V5zm.8 11c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z"
                data-icon-path="inner-path"
                opacity="0"
              />
              <title>
                
              </title>
            </svg>
            <div
              className="bx--toast-notification__details"
            >
              <h3
                className="bx--toast-notification__title"
              >
                Deprecation Notice
              </h3>
              <div
                className="bx--toast-notification__subtitle"
              >
                EditPage has been deprecated and will be removed in the next major version of carbon-addons-iot-react.
              </div>
              <div
                className="bx--toast-notification__caption"
              >
                Refactor usages of EditPage to use PageWizard instead.
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;
